2010-02-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-replaceTextContainer:): Implement this
	missing method.
	* Source/NSTextContainer.m (-setTextView:): Adjust the container
	size to the new view.
	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:):
	Better break condition for loop.

2010-02-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSpellChecker.m (_findNext:, _ignore:, _correct:): Send
	messages down to the responder chain of the main window only, to
	avoid spell checking the Spelling panel's own text field.

2010-02-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-setSelectedRange:affinity:stillSelecting:):
	Update the typing attributes of a rich text view also if the
	selected range has a non-zero length. Fixes a problem where, e.g.,
	corrections from the spell panel could use wrong attributes.

2010-02-14 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/GSDragView.m (-_handleDrag:slidePoint:): Fixed to create a 
	GSAppKitDraggingDrop event with a valid location.

2010-02-12 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSMenu.m: Make the background color of NSMenuPanel clear
	* Source/GSThemeDrawing.m:
	in drawBackgroundForMenuView:withFrame:dirtyRect:horizontal:,
	when not using tiles, fill the background of the menu with 
	the window background color.
	Now themes can draw semitransparent menus, and they work properly.

2010-02-12 19:44-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSBrowser.m: Make sure that the matrix used in the 
	browser draws its cell backgrounds properly.

2010-02-12 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSMenuView.m (-isOpaque): Return NO from isOpaque,
	so -[GSThemeDrawing
	drawBackgroundForMenuView:withFrame:dirtyRect:horizontal:]
	can draw semitransparent menus if the theme author wishes.

2010-02-12 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSThemeDrawing.m: Make the window border color customizable
